--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<h1 class="text-xl font-semibold text-gray-800">Rails View</h1>
-<div id="react-root"></div>
+<div id="react-root" data-top_scores="<%= @top_scores %>"></div>
 
-<%= javascript_include_tag "application", type: "module" %>
+<script type="module" src="<%= asset_path("application.js") %>"></script>
