user can now hit for more cards, and dealers 1st card is face up and the rest are face down

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,8 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+.card-image{
+    width: 100px;   
+    height: 150px;
+}
