--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<div id="react-root" data-top_scores="<%= @top_scores %>"></div>
+<div id="react-root" data-top_scores="<%= @top_scores %>"   data-csrf_token="<%= form_authenticity_token %>"></div>
 
 <script type="module" src="<%= asset_path("application.js") %>"></script>
